# TutuRenderer

./: CMakeLists.txt  README.md  config.txt
configs/: config_veach_bdpt.txt
include/: BDPT.hpp  BVH.hpp  BVHStrategy.hpp  BaseInterStrategy.hpp  BoundBox.hpp  Camera.hpp  IIntegrator.hpp  IIntersectStrategy.h  Intersection.hpp  LightTracing.hpp  Material.hpp  NaivePT.hpp  OBJ_Loader.h  Object.hpp  PPMGenerator.hpp  PathTracing.hpp  Postprocessor.hpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Texture.hpp  Triangle.hpp  Vector.hpp  global.hpp
src/: main.cpp  main_cornellBox.cpp  main_veach_bdpt.cpp
